[package]
name = "tide_rs"
version = "0.1.0"
edition = "2021"
authors = ["Luke Hinds <lhinds@protonmail.com>"]
description = "A rust library of the TIDE configuration parser"
license = "Apache-2.0" 
repository = "https://github.com/tideconf/tide_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
